# haskell-playground

./: .gitignore  FingerTrees.hs  QuickSort.hs  README.md  playground.cabal  stack.yaml
doc/: Lenses.txt
src/: 2017-04-12-nested-datacubes.lhs  ArrowsAreStrongProfunctors.hs  Battleship.lhs  Church.hs  FingerTrees.hs  FunWithProfunctors.hs  Interpreter.lhs  IsOrderedTree.hs  Lenses.lhs  Prompts.hs  RepresentableSorting.lhs  Singletons.hs  Tape.lhs  Validation.hs  ZipTrees.hs  hslife.hs  poptics.hs
src/CA/: EvaluatingCA.lhs  FromBitsToCellsPt1.lhs  FromBitsToCellsPt2.lhs  LZipper.hs  ZipperTraversable.hs  ZippersAndComonads.lhs
src/Continuations/: ContExample.hs  ContTutorial.hs  Searches.hs
src/FourFours/: Tex.hs  Tree.hs  missing.hs  solutions.hs  texify.hs
src/LoT/: Lens101.hs
src/Singletons/: Defunctionalization.hs  Part1.hs  Part2.hs  Part3.hs  Part4.hs
src/Zippers/: EvaluatingCA.lhs  Life.hs  MonadBehindZipper.lhs  comonadic-life-in-a-torus.hs
