name:                playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jmgimeno/haskell-playground
license:             Unlicense
license-file:        LICENSE
author:              Juan Manuel Gimeno Illa
maintainer:          jmgimeno@gmail.com
copyright:           2017 Juan Manuel Gimeno Illa
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    FingerTrees
    QuickSort
  other-modules:
  build-depends:       base >= 4.7 && < 5
                      , singletons
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/playground
